--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     <title>Whatheure</title>
+    <script src="assets/js/lang.js"></script>
 </head>
 <header class="bg-indigo-600">
     <div class="flex justify-end">
-        <button
+        <button id="btnEn"
             class="ml-2 rounded-md py-2 px-3 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500">EN</button>
-        <button
+        <button id="btnFr"
             class="ml-2 rounded-md py-2 px-3 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500">FR</button>
-        <button
+        <button id="btnDe"
             class="ml-2 rounded-md py-2 px-3 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500">DE</button>
     </div>
 </header>
@@ -23,27 +24,36 @@
             <form action="#" method="POST" id="locationForm">
                 <div class="shadow">
                     <div class="space-y-6 bg-white px-4 py-5">
-                        <p class="text-5xl text-center">Whatheure</p>
+                        <div class="text-center">
+                            <p class="text-5xl">Whatheure</p>
+                            <p class="text-sm text-gray-500 italic" id="slogan" data-i18n="slogan"></p>
+                        </div>
+
                         <div class="w-3/4 justify-center">
-                            <label for="locationInput" class="text-sm font-medium text-gray-900">Location</label>
+                            <label id="locationLabel" for="locationInput" class="text-sm font-medium text-gray-900"
+                                data-i18n="locationLabel"></label>
                             <div class="mt-2 flex rounded-md shadow-sm">
                                 <input type="text" name="locationInput" id="locationInput"
                                     class="flex-1 rounded-md border-0 py-1.5 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:shadow"
                                     placeholder="Nyon Suisse">
                                 <button type="submit"
-                                    class="ml-2 rounded-md bg-indigo-600 py-2 px-3 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500">Search</button>
+                                    class="ml-2 rounded-md bg-indigo-600 py-2 px-3 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500"
+                                    id="btnSearch" data-i18n="btnSearch"></button>
                             </div>
                         </div>
 
                         <div>
-                            <label for="timezones" class="text-sm font-medium leading-6 text-gray-900">Timezones</label>
-                            <div class="mt-2">
-                                <textarea id="timezones" name="timezones" rows="10"
-                                    class="mt-1 block w-full rounded-md border-0 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600"
-                                    placeholder="Data will be displayed here" disabled></textarea>
+                            <label id="timezonesLabel" for="timezones"
+                                class="text-sm font-medium leading-6 text-gray-900" data-i18n="timezonesLabel"></label>
+                            <div class="mt-2 flex text-center">
+                                <div class="flex-row w-1/2">
+                                    <p class="text-xl" id="locationText">1</p>
+                                </div>
+                                <div class="flex-row w-1/2">
+                                    <p class="text-xl" id="timeText">1</p>
+                                </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </form>
