Node Server loading assets

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     <title>Whatheure</title>
-    <script src="assets/js/lang.js"></script>
+    <script src="/assets/js/lang.js" defer></script>
 </head>
 <div id="loader" style="display: none" class="absolute w-full h-full bg-red-500">
 </div>
@@ -63,7 +63,7 @@
         </div>
     </div>
 </main>
-<script type="module" src="assets/js/whatheure.js"></script>
-<script type="module" src="assets/js/defaulttime.js"></script>
+<script type="module" src="/assets/js/whatheure.js"></script>
+<script type="module" src="/assets/js/defaulttime.js"></script>
 
 </html>
