Active button when switching lang

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <header class="bg-indigo-600">
     <div class="flex justify-end">
         <button id="btnEn"
-            class="ml-2 rounded-md py-2 px-3 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500">EN
+            class="ml-2 rounded-md py-2 px-3 text-sm font-semibold text-white shadow-sm hover:bg-indigo-300 bg-indigo-500">EN
         </button>
         <button id="btnFr"
-            class="ml-2 rounded-md py-2 px-3 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500">FR
+            class="ml-2 rounded-md py-2 px-3 text-sm font-semibold text-white shadow-sm hover:bg-indigo-300 bg-indigo-500">FR
         </button>
         <button id="btnDe"
-            class="ml-2 rounded-md py-2 px-3 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500">DE
+            class="ml-2 rounded-md py-2 px-3 text-sm font-semibold text-white shadow-sm hover:bg-indigo-300 bg-indigo-500">DE
         </button>
     </div>
 </header>
