Fix bug not working cause by json

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </header>
 <main>
     <div class="mt-5 w-full">
-        <form id="locationForm">
+        <form id="locationForm" method="post">
             <div class="space-y-6 px-4 py-5">
                 <div class="text-center">
                     <p class="text-5xl"><a href="/">Whatheure</a></p>
@@ -63,7 +63,8 @@
         </div>
     </div>
 </main>
-<script type="module" src="/assets/js/whatheure.js"></script>
 <script type="module" src="/assets/js/defaulttime.js"></script>
+<script type="module" src="/assets/js/whatheure.js"></script>
+
 
 </html>
